# cmake-toolchain-demo

./: .gitignore  CMakeLists.txt  main.asm  main.cpp  main.hpp  main.rc  makefile  readme.md  toolchain-linux.cmake  toolchain-windows-llvm.cmake  toolchain-windows-msvc.cmake  toolchain-windows.cmake  toolchain.cmake
